# PersonalProjects

cppstuff/terminal_apps/: a.out  ncursestest.cpp
devel/: .catkin  local_setup.sh
firmware/4x7segdisplay/: 4x7segdisplay.ino
firmware/RC_control/: RC_control.ino
firmware/arduino/: ArmPosition.h
firmware/brr_bot_with_simple_stepper/: brr_bot_with_simple_stepper.ino
firmware/cursed_230/: cursed_230.ino
firmware/cursed_230_nerfed/: cursed_230_nerfed.ino
firmware/fckin_2interupt_arduino_ass/: fckin_2interupt_arduino_ass.ino
firmware/gpt3comms/: gpt3comms.ino
firmware/irtests/: irtests.ino
firmware/stabilized_RC/: stabilized_RC.ino
firmware/superwatch/: superwatch.ino
firmware/ubcsecure/: ubcsecure.ino
firmware/zephyr_rtos/light_system_esp32/: CMakeLists.txt  prj.conf
firmware/zephyr_rtos/light_system_esp32/include/: light_sysESP32.h  light_sys_timer_callbacks.h
firmware/zephyr_rtos/light_system_esp32/src/: main.cpp
fundamental/test_proj/: a.out  main.cpp
roozki_configs/i3/: config  savespot
roozki_configs/i3blocks/: bottom  top
roozki_configs/i3status/: i3status.conf
roozki_configs/kitty/: gruvbox-material-dark-medium.conf
roozki_configs/picom/: picom.conf
roozki_configs/pulse/: ba20bd0697ac457383f9c05c01c40bff-card-database.tdb  ba20bd0697ac457383f9c05c01c40bff-default-sink  ba20bd0697ac457383f9c05c01c40bff-default-source  ba20bd0697ac457383f9c05c01c40bff-device-volumes.tdb  ba20bd0697ac457383f9c05c01c40bff-stream-volumes.tdb  cookie
setup_scripts/: i3-riced.sh
src/ncurseguitest/: CMakeLists.txt  package.xml
(+13 files in other folders)
